--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
