--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next-http-backend": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-fast-marquee": "^1.6.5",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
