--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "i18next": "^25.2.0",
     "i18next-browser-languagedetector": "^8.1.0",
     "i18next-http-backend": "^3.0.2",
+    "multi-range-slider-react": "^2.0.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
+    "react-range": "^1.10.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.0",
     "react-slick": "^0.30.3",
